fixed spacing betweeen logo and the texts

--- a/src/components/LiquidityHouse/LiquidityHouse.module.scss
+++ b/src/components/LiquidityHouse/LiquidityHouse.module.scss
@@ -18,12 +18,12 @@
 
     @media (min-width: 768px) {
         max-height: 38px;
-        gap: 12px;
+        gap: 16px;
        }
 
        @media (min-width:1200px) {
         max-height: 62px;
-        gap: 16px;
+        gap: 22px;
        }
 
     h2 {
